tests/script_runtime_errors/merge_in_place_target_no_object/error.txt
Error: 
    1 | merge 7 of {"snot": "badger"} end
      |       ^ Conflicting types, got integer but expected record